// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when DE and Association have identical names should have validation failures for each entity -> DE message  1`] = `"Domain Entity named EntityName is a duplicate declaration of that name."`;

exports[`when DE and Association have identical names should have validation failures for each entity -> DE sourceMap 1`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Domain Entity",
}
`;

exports[`when DE and Association have identical names should have validation failures for each entity -> association message  1`] = `"Association named EntityName is a duplicate declaration of that name."`;

exports[`when DE and Association have identical names should have validation failures for each entity -> association sourceMap 1`] = `
Object {
  "column": 2,
  "line": 9,
  "tokenText": "Association",
}
`;

exports[`when DE and Common have identical names should have validation failures for each entity -> DE message  1`] = `"Common named EntityName is a duplicate declaration of that name."`;

exports[`when DE and Common have identical names should have validation failures for each entity -> DE sourceMap 1`] = `
Object {
  "column": 2,
  "line": 9,
  "tokenText": "Common",
}
`;

exports[`when DE and Common have identical names should have validation failures for each entity -> SharedInteger message  1`] = `"Domain Entity named EntityName is a duplicate declaration of that name."`;

exports[`when DE and Common have identical names should have validation failures for each entity -> SharedInteger sourceMap 1`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Domain Entity",
}
`;

exports[`when DE and SharedInteger have identical names should have validation failures for each entity -> DE message  1`] = `"Domain Entity named EntityName is a duplicate declaration of that name."`;

exports[`when DE and SharedInteger have identical names should have validation failures for each entity -> DE sourceMap 1`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Domain Entity",
}
`;

exports[`when DE and SharedInteger have identical names should have validation failures for each entity -> SharedInteger message  1`] = `"Shared Integer named EntityName is a duplicate declaration of that name."`;

exports[`when DE and SharedInteger have identical names should have validation failures for each entity -> SharedInteger sourceMap 1`] = `
Object {
  "column": 2,
  "line": 9,
  "tokenText": "Shared Integer",
}
`;

exports[`when DE integer property (creating IntegerType) and SharedInteger have identical names should have validation failures for each entity -> DE message  1`] = `"Integer Type named EntityAndPropertyName is a duplicate declaration of that name."`;

exports[`when DE integer property (creating IntegerType) and SharedInteger have identical names should have validation failures for each entity -> DE sourceMap 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "integer",
}
`;

exports[`when DE integer property (creating IntegerType) and SharedInteger have identical names should have validation failures for each entity -> SharedInteger message  1`] = `"Shared Integer named EntityAndPropertyName is a duplicate declaration of that name."`;

exports[`when DE integer property (creating IntegerType) and SharedInteger have identical names should have validation failures for each entity -> SharedInteger sourceMap 1`] = `
Object {
  "column": 2,
  "line": 9,
  "tokenText": "Shared Integer",
}
`;

exports[`when two DE properties (creating different SimpleTypes) have identical names should have validation failures for each entity -> DE message  1`] = `"Integer Type named DuplicatePropertyName is a duplicate declaration of that name."`;

exports[`when two DE properties (creating different SimpleTypes) have identical names should have validation failures for each entity -> DE sourceMap 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "integer",
}
`;

exports[`when two DE properties (creating different SimpleTypes) have identical names should have validation failures for each entity -> SharedInteger message  1`] = `"String Type named DuplicatePropertyName is a duplicate declaration of that name."`;

exports[`when two DE properties (creating different SimpleTypes) have identical names should have validation failures for each entity -> SharedInteger sourceMap 1`] = `
Object {
  "column": 4,
  "line": 12,
  "tokenText": "string",
}
`;
